# ros2thesis

install/: local_setup.sh  setup.sh
install/ros2_demo_project/lib/ros2_demo_project/: mmwave_radar_node  node_monitor_node  room_map_node  static_map_node
install/ros2_demo_project/share/ament_index/resource_index/parent_prefix_path/: ros2_demo_project
install/ros2_demo_project/share/ros2_demo_project/: local_setup.sh  package.sh
install/ros2_demo_project/share/ros2_demo_project/config/: kinect_params.yaml  mmwave_radar_params.yaml  thingy52_params.yaml
log/: latest_build
logs/: mmwave_radar_node.txt  room_map_node.txt  rviz2.txt  static_map_node.txt  thingy52_node.txt
ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2/install/ros2_demo_project/lib/ros2_demo_project/: api_server.py  node_monitor_node  room_map_node
ros2/install/ros2_demo_project/share/ament_index/resource_index/parent_prefix_path/: ros2_demo_project
ros2/install/ros2_demo_project/share/ros2_demo_project/: local_setup.sh  package.bash  package.ps1  package.sh
ros2/install/ros2_demo_project/share/ros2_demo_project/gui/: index.html  main.js  styles.css
ros2/ros2thesis-main/install/: local_setup.sh  setup.sh
ros2/ros2thesis-main/install/ros2_demo_project/lib/ros2_demo_project/: kinect_node  mmwave_radar_node  static_map_node
ros2/ros2thesis-main/install/ros2_demo_project/share/ros2_demo_project/: package.sh  package.zsh
ros2/ros2thesis-main/install/ros2_demo_project/share/ros2_demo_project/launch/: node_monitor_launch.py  room_map_launch.py
ros2/ros2thesis-main/logs/: kinect_node.txt  node_monitor_node.txt  transform_listener_impl_58e19a696d60.txt  transform_listener_impl_5a7f2e4a6dd0.txt
ros2/ros2thesis-main/src/install/: local_setup.sh  setup.sh
ros2/ros2thesis-main/src/install/ros2_demo_project/lib/ros2_demo_project/: mmwave_radar_node  thingy52_node
ros2/ros2thesis-main/src/install/ros2_demo_project/share/ros2_demo_project/: package.dsv  package.sh
ros2/ros2thesis-main/src/install/ros2_demo_project/share/ros2_demo_project/launch/: system_demo_launch.py
ros2/ros2thesis-main/src/ros2_demo_project/: CMakeLists.txt  start_ros2.sh
ros2/ros2thesis-main/src/ros2_demo_project/gui/: index.html  main.js  styles.css
ros2/ros2thesis-main/src/ros2_demo_project/launch/: kinect_launch.py
ros2/ros2thesis-main/src/ros2_demo_project/src/: api_server.py  kinect_node.cpp  mmwave_radar_node.cpp  room_map_node.cpp
src/log/: latest_build
src/ros2_demo_project/: CMakeLists.txt
src/ros2_demo_project/launch/: mmwave_radar_launch.py
src/ros2_demo_project/src/: node_monitor_node.cpp  static_map_node.cpp  thingy52_node.cpp
